--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Hi Akankshaaaaaa  🎉</title>
+<title>Hi Akankshaaaaaa 🎉</title>
 <link rel="icon" type="image/svg+xml"
 href="data:image/svg+xml,
 <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'>
@@ -135,7 +135,7 @@ button:hover{ transform:scale(1.1); }
 <body>
 
 <h1>Hi Akankshaaaaaa 🎉</h1>
-<h2>It’s YOUR Birthdayyyyy 🎂✨</h2>
+<h2>Happy Birthdayyyyy 🎂✨</h2>
 
 <button onclick="openModal('roastModal')">😂 Roast Mode</button>
 <button onclick="openModal('quizModal')">🎮 Birthday Quiz</button>
