Add footer with attribution to Rohit Roy

--- a/index.html
+++ b/index.html
@@ -278,5 +278,12 @@ function partyMode(){
 }
 </script>
 
+<div class="footer">
+    Crafted with 🎉 by 
+    <a href="https://rohitroy.in" target="_blank">
+        Rohit Roy
+    </a>
+</div>
+
 </body>
 </html>
