Implement footer styling and hover effects
Add styles for a footer with hover effects.

--- a/index.html
+++ b/index.html
@@ -130,6 +130,27 @@ button:hover{ transform:scale(1.1); }
         opacity:0.8;
     }
 }
+/* Footer */
+.footer{
+    position:fixed;
+    bottom:10px;
+    width:100%;
+    text-align:center;
+    font-size:14px;
+    opacity:0.8;
+}
+
+.footer a{
+    color:#ffffff;
+    text-decoration:none;
+    font-weight:600;
+    transition:0.3s;
+}
+
+.footer a:hover{
+    color:#ffb6f0;
+    text-shadow:0 0 10px pink;
+}
 </style>
 </head>
 <body>
