--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ button:hover{ transform:scale(1.1); }
 <body>
 
 <h1>Hi Akankshaaaaaa 🎉</h1>
-<h2>It’s YOUR Birthdayyyyy 🎂✨</h2>
+<h2>Happy Birthdayyyyy 🎂✨</h2>
 
 <button onclick="openModal('roastModal')">😂 Roast Mode</button>
 <button onclick="openModal('quizModal')">🎮 Birthday Quiz</button>
